gem update + seeds

--- a/app/views/devices/show.html.slim
+++ b/app/views/devices/show.html.slim
@@ -16,7 +16,7 @@
     strong = "-> #{t('devices.device')}:"
     = "#{@device.id} - #{@device.name}"
     - status = 'completed'
-    - status = @device.tasks.where(typeoftask_id: 3).first.typeofstatus.name.downcase
+    - status = @device.tasks.where(typeoftask_id: 3).first.typeofstatus.name.downcase if @device.tasks.where(typeoftask_id: 3).first
     = image_tag('online.png', hspace: '10') if (Time.now.utc - @device.updated_at < @device.ping + 5)
     = link_to '', {:controller => "tasks", :action => "index", :device_id => @device.id }, :method => "get", class: "btn img-status status-#{status}", title: t('nav.tasks')
     = link_to '', {:controller => "tasks", :action => "index", :device_id => @device.id }, :method => "get", class: "glyphicon glyphicon-list btn btn-md btn-default pull-right", title: t('nav.tasks')
@@ -42,7 +42,7 @@ p.col-md-6
     strong = "#{t('devices.thead.version')}:"
     = @device.version
     - status = 'completed'
-    - status = @device.tasks.where(typeoftask_id: 7).first.typeofstatus.name.downcase
+    - status = @device.tasks.where(typeoftask_id: 7).first.typeofstatus.name.downcase if @device.tasks.where(typeoftask_id: 3).first && @device.tasks.where(typeoftask_id: 7).present?
     = link_to '', {:controller => "tasks", :action => "index", :device_id => @device.id }, :method => "get", class: "btn img-status status-#{status}", title: t('nav.tasks')
   p
     strong = "#{t('devices.thead.ping')}:"
