Added startdate stopdate begintime endtime in plsgbmusic(view controller WITHOUT migration)

--- a/app/views/plsbgmusics/_form.html.slim
+++ b/app/views/plsbgmusics/_form.html.slim
@@ -12,6 +12,25 @@
         = f.time_field :time, class: "form-control input-small"
         span.input-group-addon
           i.glyphicon.glyphicon-time
+
+    .field.col-md-2
+      .input-group.bootstrap-timepicker.timepicker.col-md-1
+        = f.time_field :time, class: "form-control input-small"
+        span.input-group-addon
+          i.glyphicon.glyphicon-time
+
+    .field.col-md-2
+      .input-group.bootstrap-timepicker.timepicker.col-md-1
+        = f.time_field :time, class: "form-control input-small"
+        span.input-group-addon
+          i.glyphicon.glyphicon-time
+
+    .field.col-md-2
+      .input-group.bootstrap-timepicker.timepicker.col-md-1
+        = f.time_field :time, class: "form-control input-small"
+        span.input-group-addon
+          i.glyphicon.glyphicon-time
+
     = f.label t('pls.name'), class: "col-md-1"
     = f.text_field :name
     .actions.pull-right = f.submit t('std.save'), class: "btn btn-success btn-md"
