--- a/app/views/tasks/index.html.slim
+++ b/app/views/tasks/index.html.slim
@@ -13,9 +13,9 @@ table.table.table-striped.table-hover.table-condensed.table-bordered
       th = t('tasks.thead.device')
       th = t('tasks.thead.type')
       th = t('tasks.thead.status')
-      th
+      th = t('tasks.thead.complited')
       /th Options
-      th
+      th = t('tasks.thead.created')
       th = t('orders.thead.user')
 
   tbody
