--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -1,5 +1,8 @@
 = paginate @messages
 
+= form_tag messages_path, method: 'get' do
+  = text_field_tag :search, params[:search]
+  = submit_tag t('orders.search'), name: nil
 table.table.table-striped.table-hover.table-condensed.table-bordered
   thead
     tr
