--- a/app/views/plsbgimages/index.html.slim
+++ b/app/views/plsbgimages/index.html.slim
@@ -1,4 +1,7 @@
 .col-md-6
+  = form_tag plsbgimages_path, method: 'get' do
+    = text_field_tag :search, params[:search]
+    = submit_tag t('orders.search'), name: nil
   h1.col-md-8.pull-left = t('pls.i_title')
   = link_to new_plsbgimage_path, class:"btn btn-md btn-primary pull-right"
     span.glyphicon.glyphicon-plus
