--- a/app/views/plsbgmusics/index.html.slim
+++ b/app/views/plsbgmusics/index.html.slim
@@ -1,8 +1,13 @@
 .col-md-6
+  = form_tag plsbgmusics_path, method: 'get' do
+    = text_field_tag :search, params[:search]
+    = submit_tag t('orders.search'), name: nil
   h1.col-md-8.pull-left = t('pls.m_title')
+
   = link_to new_plsbgmusic_path, class:"btn btn-md btn-primary pull-right"
     span.glyphicon.glyphicon-plus
     = t('pls.new')
+
 
   table.table.table-striped.table-hover.table-condensed.table-bordered
     thead
