Добавил onclic на tr Теперь открыть можно просто кликнув на строку, нужно добавить css confirm теперь отрывается модальным окном, на мобильных устройствах отображается не кривоЭ

--- a/app/views/markets/index.html.slim
+++ b/app/views/markets/index.html.slim
@@ -16,7 +16,7 @@
 
     tbodys
       - @markets.each do |market|
-        tr
+        tr onclick="window.location.href='markets/#{market.id}'"
           td = market.id
           td.col-md-7 = market.name
           td = Period.where(id: market.period.to_i).first.name
