--- a/app/views/orders/index.html.slim
+++ b/app/views/orders/index.html.slim
@@ -24,7 +24,8 @@ table.table.table-striped.table-hover.table-condensed.table-bordered
 
   tbody
     - @orders.each do |order|
-      tr onclick="window.location.href='orders/#{order.id}'"
+      tr
+        /Fixme onclick="window.location.href='orders/#{order.id}'" не объеденяется с модальным коном
         td = order.id
         td.col-md-6 = order.name
         td class="img-status status-#{order.status.name.downcase}"
