add cursor pointer on onclick

--- a/app/views/plsbgvideos/index.html.slim
+++ b/app/views/plsbgvideos/index.html.slim
@@ -19,7 +19,7 @@
 
     tbody
       - @plsbgvideos.each do |plsbgvideo|
-        tr onclick="window.location.href='plsbgvideos/#{plsbgvideo.id}'"
+        tr onclick="window.location.href='plsbgvideos/#{plsbgvideo.id}'" onmouseover="this.style.cursor='pointer'"
           td = plsbgvideo.id
           td.col-md-6 = plsbgvideo.name
           td = (plsbgvideo.created_at + 3600 * 7).to_s[0..18]
