--- a/app/assets/stylesheets/plsbgmusics.scss
+++ b/app/assets/stylesheets/plsbgmusics.scss
@@ -1,3 +1,6 @@
 // Place all the styles related to the plsbgmusics controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+onclick:hover{
+  cursor:pointer;
+}
