--- a/app/views/markets/index.html.slim
+++ b/app/views/markets/index.html.slim
@@ -16,7 +16,7 @@
 
     tbodys
       - @markets.each do |market|
-        tr onclick="window.location.href='markets/#{market.id}'"
+        tr onclick="window.location.href='markets/#{market.id}'" onmouseover="this.style.cursor='pointer'"
           td = market.id
           td.col-md-7 = market.name
           td = Period.where(id: market.period.to_i).first.name
