--- a/app/views/messages/index.html.slim
+++ b/app/views/messages/index.html.slim
@@ -17,7 +17,7 @@ table.table.table-striped.table-hover.table-condensed.table-bordered
       /th
   tbody
     - @messages.each do |message|
-      tr onclick="window.location.href='messages/#{message.id}'"
+      tr onclick="window.location.href='messages/#{message.id}'" onmouseover="this.style.cursor='pointer'"
         td = message.id
         td = message.device.id
         td = message.device.name
