--- a/app/views/plsbgimages/index.html.slim
+++ b/app/views/plsbgimages/index.html.slim
@@ -16,7 +16,7 @@
 
     tbody
       - @plsbgimages.each do |plsbgimage|
-        tr onclick="window.location.href='plsbgimages/#{plsbgimage.id}'"
+        tr onclick="window.location.href='plsbgimages/#{plsbgimage.id}'" onmouseover="this.style.cursor='pointer'"
           td = plsbgimage.id
           td.col-md-6 = plsbgimage.name
           td = (plsbgimage.created_at + 3600 * 7).to_s[0..18]
